--- a/structure/sass/tkgreen/elements/_collection.scss
+++ b/structure/sass/tkgreen/elements/_collection.scss
@@ -3,22 +3,24 @@
  list-style           : none;
  display              : grid;
  grid-template-columns: 1fr;
- gap                  : $spacer;
+ gap                  : calc($spacer * 2);
 
 
- .card {
+  .card {
   background-color     : neutral(1);
   box-shadow           : $bs;
   display              : grid;
-  grid-template-columns: 250px 1fr;
   gap                  : $spacer;
+  @include mq(small){
+  grid-template-columns: .4fr 1fr;
+  }
+
 
   &__image {
    display: flex;
 
    img {
     object-fit  : cover;
-    aspect-ratio: 1/1;
    }
   }
 
@@ -33,5 +35,5 @@
    }
   }
 
- }
+  }
 }
