--- a/structure/sass/tkgreen/global/_utilities.scss
+++ b/structure/sass/tkgreen/global/_utilities.scss
@@ -1,75 +1,65 @@
 // Utilities
 
 .span {
-    grid-column: 1 / -1;
+ grid-column: 1 / -1;
 }
 
 .text-small {
-    font-size  : .8rem;
-    font-weight: $fw-l;
+ font-size  : .8rem;
+ font-weight: $fw-l;
 }
 
 .text-danger {
-    color      : $clr-red;
-    font-weight: $fw-b;
-    font-size  : 1.25rem;
+ color      : $clr-red;
+ font-weight: $fw-b;
+ font-size  : 1.25rem;
 }
 
 .text-muted {
-    background-color: neutral(1);
-    color           : neutral(3);
-    font-weight     : $fw-l;
-    line-height: 1.3;
-    font-size: .9rem;
-    font-family: $ff-sans-headings;
+ background-color: neutral(1);
+ color           : neutral(3);
+ font-weight     : $fw-l;
+ line-height     : 1.3;
+ font-size       : .9rem;
+ font-family     : $ff-sans-headings;
 }
 
 .text-italic {
-font-style: italic;
+ font-style: italic;
 }
 
 inline-text {
-    display: inline-block;
+ display: inline-block;
 }
 
 // Cutoff Text Styles
 .cutoff-text {
- --max-lines  :5;
- --line-height: 1.4;
+ --max-lines: 5;
 
- max-height : calc(var(--max-lines) * 1em * var(--line-height));
- line-height: var(--line-height);
- overflow   : hidden;
+ display           : -webkit-box;
+ overflow          : hidden;
+ -webkit-box-orient: vertical;
+ -webkit-line-clamp: var(--max-lines);
+
 
  position: relative;
-
- &:has(+ .expand-btn:not(:checked))::before {
-  content       : '';
-  position      : absolute;
-  height        : calc(1em * var(--line-height));
-  width         : 100%;
-  bottom        : 0;
-  pointer-events: none;
- 
-  // background    : linear-gradient(to bottom, transparent, white);
- }
-
 }
+
 
 .expand-btn {
  appearance   : none;
- color: neutral(5);
+ color        : neutral(5);
  border       : 1px solid hsl(0, 0%, 85%);
  padding      : .25em;
  border-radius: .25em;
  cursor       : pointer;
  margin-top   : $spacer;
- width: fit-content;
+ width        : fit-content;
  margin-inline: auto;
 
  &:hover {
   background-color: $clr-accent;
-  color: white;
+  color           : white;
  }
 
  &::before {
@@ -87,4 +77,3 @@ inline-text {
  max-height: none;
 
 }
-
